--- a/marcelo_01/index.html
+++ b/marcelo_01/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>001 | JS</title>
-</head>
-<body>
-    <script>
+
+    <script src="JS/JavaScript.js">
         alert("Hello World");
         alert("Primeira aula de JavaScript")
     </script>
-
+    
+</head>
+<body>
     <h1>Wellcome to this web server</h1>
 </body>
 </html>
