--- a/marcelo_01/index.html
+++ b/marcelo_01/index.html
@@ -7,10 +7,10 @@
     <title>001 | JS</title>
 
     <script src="JS/JavaScript.js">
-        alert("Hello World");
-        alert("Primeira aula de JavaScript")
+        // alert("Hello World");
+        // alert("Primeira aula de JavaScript")
     </script>
-    
+
 </head>
 <body>
     <h1>Wellcome to this web server</h1>
