--- a/Mar_05/index.html
+++ b/Mar_05/index.html
@@ -15,7 +15,7 @@
         <input type="button" value="Submit" onclick="calc()">
     </div>
     <div class="rest" id="rests">
-
+        sim
     </div>
 </body>
 </html>
